// Unless explicitly stated otherwise all files in this repository are licensed
// under the Apache License Version 2.0.
// This product includes software developed at Datadog (https://www.datadoghq.com/).
// Copyright 2025 Datadog, Inc.

syntax = "proto3";

package disruptionlistener;

option go_package = "./disruptionlistener";

import "google/protobuf/empty.proto";

service DisruptionListener {
  rpc Disrupt(DisruptionSpec) returns (google.protobuf.Empty) {}
  rpc ResetDisruptions(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message DisruptionSpec {
  repeated EndpointSpec endpoints = 1;
}

message EndpointSpec {
  string targetEndpoint = 1;
  repeated AlterationSpec alterations = 2;
}

message AlterationSpec {
  string errorToReturn = 1;
  string overrideToReturn = 2;
  int32 queryPercent = 3;
}
